# AI_CONTROL_PLANE

./: .dockerignore  .env.example  .env.prod.example  .gitignore  COMPLETE_ROADMAP.md  EC2_DEPLOYMENT.md  PUBLISHING_GUIDE.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy-backend.yml  publish-mcp.yml
control-plane/: .dockerignore  .env  Dockerfile  fix_sse.py  fix_sse_endpoint.py  main.py  requirements.txt  test_db.py
control-plane/ai_engine/: ai_engine.py
control-plane/app/: Schema.py  aggregate_persistence.py  cache.py  config.py  customer_metrics.py  database.py  dependencies.py  main.py  models.py  quota.py  realtime_aggregates.py  utils.py
control-plane/app/ai_engine/: ai_engine.py  background_analyzer.py  llm_analyzer.py  schemas.py  threshold_manager.py
control-plane/app/blockchain/: __init__.py  avalanche.py  erc8004.py
control-plane/app/database/: Schema.py  database.py  models.py
control-plane/app/functions/: IncidentTracker.py  decisionFunction.py  email.py  mailer.py  template.html  template.py
control-plane/app/jobs/: aggregation_jobs.py
control-plane/app/queue/: __init__.py  connection.py  consumer.py  email_consumer.py  email_publisher.py  publisher.py
control-plane/app/redis/: aggregate_persistence.py  cache.py
control-plane/app/router/: IncidentTracker.py  adaptive_timeout.py  agentic_payments.py  ai_insights.py  analytics.py  auth.py  billing.py  flags.py  history.py  overrides.py  services.py  (+4 more)
control-plane/migrations/: add_distributed_tracing.sql  env.py
dashboard/: .vade-report  AUTH_CLIENT_GUIDE.md  AUTH_HOOKS_IMPLEMENTATION.md  DASHBOARD_NAVBAR_GUIDE.md  FIXING_BLANK_DASHBOARD.md  HOME_PAGE_REFACTORING.md  PROMISE_EXPLAINED.md  SERVER_CLIENT_PROPS_FIX.md  SETQUERYDATA_VS_INVALIDATE.md  next.config.ts  package-lock.json  package.json  proxy.ts
dashboard/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/components/: TimeRangeSelector.tsx
dashboard/hooks/: useAIInsights.ts  useAdaptiveTimeout.ts  useAgenticPayments.ts  useAnalytics.ts  useApiKeys.ts  useBilling.ts  useFlags.ts  useIncidents.ts  useOverrides.ts  useSSE.ts  useSignals.ts  useTraces.ts
dashboard/lib/: auth-client.ts  control-plane-client.ts  function.ts  types.ts
dashboard/schema/: authSchema.ts
demo-service/: .dockerignore  Dockerfile  package-lock.json  package.json  server.js  server_traffic_management.js  test-caching.sh  test-circuit-breaker.sh  test-rate-limit.sh  test-sdk.js  test_quick_spike.sh  test_traffic_management.sh
docs/: ADAPTIVE_TIMEOUT.md  AI_DECISIONS.md  CACHE_FLOW_DIAGRAM.md  CACHING.md  CIRCUIT_BREAKER.md  CONFIGURATION.md  CONFIG_OVERRIDE.md  CONTRIBUTOR_WORKFLOW.md  DEPLOYMENT.md  FEATURE_FLAGS.md  GETTING_STARTED.md  LOAD_SHEDDING.md  MCP.md  QUEUE_DEFERRAL.md  RATE_LIMITING.md  README.md  REDIS_GUIDE.md  REQUEST_COALESCING.md  SDK_QUICK_REFERENCE.md  TRACING.md
hackathon-agent/: .env.example  agent.js  package-lock.json  package.json
mcp-server/: .env.example  CHANGELOG.md  Dockerfile  README.md  __main__.py  pyproject.toml  server.py
nginx/: nginx.prod.conf
sdk/nodejs/: CHANGELOG.md  ENABLE_2FA_AND_PUBLISH.md  README.md  TYPESCRIPT_SUPPORT.md  ai-control-plane-sdk-1.0.0.tgz  index.d.ts  index.js  neuralcontrol-1.0.0.tgz  package-lock.json  package.json
sdk/python/: CHANGELOG.md  PUBLISH.md  README.md  pyproject.toml
sdk/python/ai_control_plane/: __init__.py  client.py  middleware.py  py.typed
workers/razorpay-webhook/: handler.py  package-lock.json  package.json  serverless.yml
(+83 files in other folders)
