[project]
name = "neuralcontrol-mcp"
version = "1.0.0"
description = "MCP Server for the AI Control Plane — gives AI editors live access to endpoint configs, metrics, and SDK docs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "ai", "control-plane", "neuralcontrol", "observability", "performance"]
authors = [
    { name = "NeuralControl", email = "hello@neuralcontrol.dev" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Ayush-soni-12/AI_CONTROL_PLANE"
Documentation = "https://github.com/Ayush-soni-12/AI_CONTROL_PLANE/tree/main/docs"
"Bug Tracker" = "https://github.com/Ayush-soni-12/AI_CONTROL_PLANE/issues"

[project.scripts]
neuralcontrol-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "server.py",
    ".env.example",
]
